# todo-app-medium

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html
